So many fixes, but the gaps don't work right

--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -4,15 +4,15 @@
 }
 
 window#waybar {
-    background-color: rgba(10, 10, 10, 0.9);
-    border-bottom: 3px solid rgba(63, 63, 63, 0.9);
-    color: #ffffff;
+    background-color: #141414;
+    border-bottom: 3px solid #264653;
+    color: white;
     transition-property: background-color;
     transition-duration: .5s;
 }
 
 window#waybar.hidden {
-    opacity: 0.8;
+    opacity: 0.7;
 }
 
 /*
@@ -58,7 +58,7 @@ button:hover {
 }
 
 #workspaces button.focused {
-    background-color: #64727D;
+    background-color: #264653;
     box-shadow: inset 0 -3px #ffffff;
 }
 
@@ -89,27 +89,16 @@ button:hover {
 #power-profiles-daemon,
 #mpd {
     padding: 0 10px;
-    color: #ffffff;
+    color: white;
 }
 
-#window,
-#workspaces {
-    margin: 0 4px;
-}
-
-/* If workspaces is the leftmost module, omit left margin */
-.modules-left > widget:first-child > #workspaces {
-    margin-left: 0;
-}
-
-/* If workspaces is the rightmost module, omit right margin */
-.modules-right > widget:last-child > #workspaces {
-    margin-right: 0;
+#window {
+    margin: 0 13px;
 }
 
 #clock {
-    background-color: #ffd6a5;
-    color: #000000;
+    background-color: #264653;
+    color: white;
 }
 
 #battery {
@@ -164,13 +153,63 @@ label:focus {
 }
 
 #cpu {
-    background-color: #fdffb6;
-    color: #000000;
+    background-color: #287271;
+    color: white;
 }
 
 #memory {
-    background-color: #caffbf;
-    color: #000000;
+    background-color: #2a9d8f;
+    color: white;
+}
+
+#temperature {
+    background-color: #8ab17d;
+    color: black;
+}
+
+#temperature.critical {
+    background-color: #e76f51;
+    color: white;
+}
+
+#pulseaudio {
+    background-color: #e9c46a;
+    color: black;
+}
+
+#pulseaudio.muted {
+    background-color: #e76f51;
+    color: white;
+}
+
+#idle_inhibitor {
+    background-color: #efb366;
+    color: black;
+}
+
+#idle_inhibitor.activated {
+    background-color: #efb366;
+}
+
+#language {
+    background: #f4a261;
+    color: black;
+    padding: 0 8px;
+    min-width: 16px;
+}
+
+#tray {
+    background-color: #ee8959;
+    color: white;
+}
+
+#tray > .passive {
+    -gtk-icon-effect: dim;
+}
+
+#tray > .needs-attention {
+    -gtk-icon-effect: highlight;
+    background-color: #e76f51;
 }
 
 #disk {
@@ -187,16 +226,6 @@ label:focus {
 
 #network.disconnected {
     background-color: #ffadad;
-}
-
-#pulseaudio {
-    background-color: #a0c4ff;
-    color: #000000;
-}
-
-#pulseaudio.muted {
-    background-color: #90b1b1;
-    color: #2a5c45;
 }
 
 #wireplumber {
@@ -222,37 +251,6 @@ label:focus {
     background-color: #ffa000;
 }
 
-#temperature {
-    background-color: #9bf6ff;
-    color: #000000;
-}
-
-#temperature.critical {
-    background-color: #ffadad;
-}
-
-#tray {
-    background-color: white;
-}
-
-#tray > .passive {
-    -gtk-icon-effect: dim;
-}
-
-#tray > .needs-attention {
-    -gtk-icon-effect: highlight;
-    background-color: #ffadad;
-}
-
-#idle_inhibitor {
-    background-color: #ffc6ff;
-    color: #000000;
-}
-
-#idle_inhibitor.activated {
-    background-color: #ffc6ff;
-    color: #000000;
-}
 
 #mpd {
     background-color: #66cc99;
@@ -269,13 +267,6 @@ label:focus {
 
 #mpd.paused {
     background-color: #51a37a;
-}
-
-#language {
-    background: #fbe0e0;
-    color: #000000;
-    padding: 0 8px;
-    min-width: 16px;
 }
 
 #keyboard-state {
